# openstaad-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  openstaad-mcp-dir.spec  pyproject.toml  server.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
code-review/: OMCP-001-sandbox-format-string-dunder-bypass.md  OMCP-002-path-traversal-read-skills.md  OMCP-003-sandbox-escape-com-internals.md  OMCP-004-executor-deadlock-after-timeout.md  OMCP-005-com-api-filesystem-write-ntlm-relay.md  OMCP-006-http-unauthenticated-default.md  OMCP-007-dos-unbounded-resource-consumption.md  OMCP-008-sandbox-mro-type-hierarchy-leak.md  OMCP-009-indirect-prompt-injection-com-output.md  OMCP-010-missing-sec-fetch-middleware.md  OMCP-011-info-disclosure-stack-traces.md  OMCP-012-token-in-process-args.md  OMCP-013-unc-path-crash-pii-leak.md  OMCP-014-cffi-overflowerror-dos-negative-offset.md  findings-index.md  gitleaks-inconsistencies.md  openstaad-mcp-security-audit-Apr-14-2026-0000.md  progress.md  semgrep-inconsistencies.md  todo.md  validation-log.md
docs/: execution-flow.md  monty-sandbox-architecture.md  plan.md  prompt-injection-risk.md  tool-capability-manifests.md  v2-changes-summary.md
docs/examples/: claude-desktop-http.json  vscode-mcp-http.json  vscode-mcp-stdio.json
docs/plan-research-support/: Tool-Capability-Manifest-Specification.md  customer-workflow-stories.md  desktop-local.md  engineering-process-workflows.md  enumerate-com-api.py  execution-flow-file-io.md  execution-flow-short.md  execution-flow-simple-beam.md  file-io-design.md  file-io-implementation-plan.md  http-auth-ots-design.md  real-world-openstaad-workflows.md  security-architecture-review-v2.results.md  (+2 more)
mcpb/: manifest.json  openstaad-mcp.spec
scripts/: write_integration_tests.py
tests/: __init__.py  test_connection.py  test_domain_tools.py  test_http_security.py  test_integration.py  test_mcp_live.py  test_mcp_protocol.py  test_middleware.py  test_server.py  test_skills.py  test_version.py
(+121 files in other folders)
