[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "openstaad-mcp"
version = "1.1.2"
description = "MCP server for Bentley STAAD.Pro via OpenSTAAD API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Bentley Systems Inc." }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=3.2.3,<4",
    "packaging>=24",
    "starlette>=1.0.0,<2.0.0",
    "pydantic>=2,<3",
    "pywin32>=311; platform_system == 'Windows'",
    "openstaadpy @ git+https://github.com/BentleySystems/openstaadpy.git@306b77ba6a4bed68fd91f21df19c9fd5fc9fb2e1",
    "openpyxl>=3.1,<4",
    "defusedxml>=0.7",
    "chardet>=5,<8",
]

[project.urls]
Homepage = "https://github.com/BentleySystems/openstaad-mcp"
Issues = "https://github.com/BentleySystems/openstaad-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

build = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
openstaad-mcp = "openstaad_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openstaad_mcp"]

[tool.hatch.metadata]
allow-direct-references = true # TODO: Temporary workaround for openstaadpy direct reference until it's published on pypi

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/openstaad_mcp/staad_skills", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF200"]

[tool.ruff.lint.isort]
known-first-party = ["openstaad_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running STAAD.Pro instance (Windows only)",
]
